---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
RUF066 `name` is a property without a `return` statement
 --> RUF066.py:7:9
  |
5 | class User:  # Test normal class properties
6 |     @property
7 |     def name(self):  # ERROR: No return
  |         ^^^^
8 |         f"{self.first_name} {self.last_name}"
  |

RUF066 `nested` is a property without a `return` statement
  --> RUF066.py:18:9
   |
17 |     @property
18 |     def nested(self):  # ERROR: Property itself doesn't return
   |         ^^^^^^
19 |         def inner():
20 |             return 0
   |

RUF066 `prop2` is a property without a `return` statement
  --> RUF066.py:43:9
   |
42 |     @property
43 |     def prop2(self):  # ERROR: Not returning something (even when we are inside an ABC)
   |         ^^^^^
44 |         50
   |

RUF066 `generator_lambda` is a property without a `return` statement
  --> RUF066.py:75:9
   |
73 | class Nested:  # A `yield` in a nested lambda belongs to the lambda, not the property
74 |     @property
75 |     def generator_lambda(self):  # ERROR: The property itself falls through
   |         ^^^^^^^^^^^^^^^^
76 |         lambda: (yield 1)
   |

RUF066 `nested_concrete_property` is a property without a `return` statement
  --> RUF066.py:90:13
   |
88 |     class Concrete:
89 |         @property
90 |         def nested_concrete_property(self):  # ERROR: Owning class is concrete, not a protocol
   |             ^^^^^^^^^^^^^^^^^^^^^^^^
91 |             self.value
   |
